Design.css
.options button{
    padding: 10px;
    margin: 8px;
}

.options{
    display: grid;
    grid-template-columns: repeat(3,max-content);
    gap: 15px; 
    max-width: 100%;
    margin-bottom: 30px;
}

#gun-skins-list{
    display: flex;
    gap: 10px;
}

.skin-card {
  background: #1a1a2e;
  color: gold;
  padding: 10px;
}

.skin-card img {
  width: 200px;
  height: 150px;
  object-fit: cover;
}

